--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,11 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+
+management.endpoints.web.exposure.include=health,info
+
+management.endpoint.health.probes.enabled=true
+
 jwt.secret.key=${JWT_SECRET_KEY}
 jwt.expiration.accessToken=${JWT_ACCESS_TOKEN_EXPIRATION}
 jwt.expriation.refreshToken=${JWT_REFRESH_TOKEN_EXPIRATION}
@@ -14,15 +19,15 @@ spring.data.redis.host=${REDIS_HOST}
 spring.data.redis.port=${REDIS_PORT}
 spring.data.redis.database=${REDIS_SCHEMA}
 
-# AWS CREDENTIALS
-aws.credentials.access-key=${AWS_ACCESS_KEY}
-aws.credentials.secret-key=${AWS_SECRET_KEY}
-
-# AWS REGION
-aws.region=${AWS_REGION}
-
-# AWS BUCKET
-aws.s3.bucket=${AWS_S3_BUCKET}
+## AWS CREDENTIALS
+#aws.credentials.access-key=${AWS_ACCESS_KEY}
+#aws.credentials.secret-key=${AWS_SECRET_KEY}
+#
+## AWS REGION
+#aws.region=${AWS_REGION}
+#
+## AWS BUCKET
+#aws.s3.bucket=${AWS_S3_BUCKET}
 
 
 #SERVER SETTINGS
