--- a/build.gradle
+++ b/build.gradle
@@ -66,6 +66,8 @@ dependencies {
 	// Mapper
 	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
 	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
+
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 }
 
 tasks.named('test') {
