--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,7 +45,7 @@ jobs:
             $IMAGE_NAME:${{ steps.meta.outputs.TAG }}
 
       - name: Upload artifact (TAR)
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        if: github.event_name == 'push' && github.ref == 'refs/heads/master'
         uses: actions/upload-artifact@v4
         with:
           name: ${{ env.SERVICE }}-image-${{ steps.meta.outputs.TAG }}     # ← 아티팩트 이름
@@ -53,7 +53,7 @@ jobs:
           retention-days: 7
 
       - name: Notify infra (repository_dispatch)
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        if: github.event_name == 'push' && github.ref == 'refs/heads/master'
         uses: peter-evans/repository-dispatch@v3
         with:
           token:      ${{ secrets.INFRA_REPO_TOKEN }}
