--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,7 @@ jobs:
 
       - name: Docker build
         run: |
-          docker build -t $IMAGE_NAME:${{ steps.meta.outputs.TAG }} -t $IMAGE_NAME:latest .
+          docker build -t $IMAGE_NAME:${{ steps.meta.outputs.TAG }} -t $IMAGE_NAME:v1 .
 
       - name: Save image as TAR
         run: |
