--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,5 @@
-name: Backend | Build → TAR → Upload(artifact) → Notify infra
+name: Backend | Build → Push(Docker Hub) → (artifact) → Notify infra
+
 on:
   push:
     branches: [ master ]
@@ -15,6 +16,7 @@ permissions:
 env:
   SERVICE: backend
   IMAGE_NAME: carnav-backend
+  DOCKERHUB_NAMESPACE: gabicate
   INFRA_REPO: gabriella0128/career-navigator-infra
 
 jobs:
@@ -23,34 +25,41 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # (선택) 사전 빌드/테스트: Dockerfile이 자체 빌드하면 생략 가능
-      - uses: actions/setup-java@v4
+      - name: Compose FULL_IMAGE
+        run: echo "FULL_IMAGE=docker.io/${DOCKERHUB_NAMESPACE}/${IMAGE_NAME}" >> "$GITHUB_ENV"
+
+      - name: Setup Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      # PR에서는 빌드만(푸시/아티팩트 X)
+      - name: Build (no push) on PR
+        if: github.event_name == 'pull_request'
+        uses: docker/build-push-action@v6
         with:
-          distribution: temurin
-          java-version: '21'
-      - run: ./gradlew bootJar --no-daemon
+          context: .
+          push: false
+          tags: ${{ env.IMAGE_NAME }}:${{ steps.meta.outputs.TAG }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
-      - name: Set TAG
-        id: meta
-        run: echo "TAG=main-${GITHUB_SHA::7}" >> $GITHUB_OUTPUT
-
-      - name: Docker build
-        run: |
-          docker build -t $IMAGE_NAME:${{ steps.meta.outputs.TAG }} -t $IMAGE_NAME:v1 .
-
-      - name: Save image as TAR
-        run: |
-          mkdir -p /tmp/carnav
-          docker save -o /tmp/carnav/${{ env.SERVICE }}-${{ steps.meta.outputs.TAG }}.tar \
-            $IMAGE_NAME:${{ steps.meta.outputs.TAG }}
-
-      - name: Upload artifact (TAR)
+      - name: Login to Docker Hub
         if: github.event_name == 'push' && github.ref == 'refs/heads/master'
-        uses: actions/upload-artifact@v4
+        uses: docker/login-action@v3
         with:
-          name: ${{ env.SERVICE }}-image-${{ steps.meta.outputs.TAG }}     # ← 아티팩트 이름
-          path: /tmp/carnav/${{ env.SERVICE }}-${{ steps.meta.outputs.TAG }}.tar
-          retention-days: 7
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push
+        if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: true
+          tags: |
+            ${{ env.FULL_IMAGE }}:v1
+            ${{ env.FULL_IMAGE }}:${{ steps.meta.outputs.TAG }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
       - name: Notify infra (repository_dispatch)
         if: github.event_name == 'push' && github.ref == 'refs/heads/master'
@@ -66,5 +75,6 @@ jobs:
               "repo": "${{ github.repository }}",
               "run_id": "${{ github.run_id }}",
               "artifact_name": "backend-image-${{ steps.meta.outputs.TAG }}",
-              "image_name": "carnav-backend"
+              "image_name": "${{ env.IMAGE_NAME }}",
+              "full_image": "${{ env.FULL_IMAGE }}"
             }
