--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Set TAG
+        id: meta
+        run: echo "TAG=main-${GITHUB_SHA::7}" >> "$GITHUB_OUTPUT"
+
       - name: Compose FULL_IMAGE
         run: echo "FULL_IMAGE=docker.io/${DOCKERHUB_NAMESPACE}/${IMAGE_NAME}" >> "$GITHUB_ENV"
 
