20250820 application.properties 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,8 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
+management.endpoints.web.base-path=/actuator
 management.endpoints.web.exposure.include=health,info
-
 management.endpoint.health.probes.enabled=true
 
 jwt.secret.key=${JWT_SECRET_KEY}
