20250820 application.properties2 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,7 @@ jwt.expriation.refreshToken=${JWT_REFRESH_TOKEN_EXPIRATION}
 # REDIS PROPERTIES
 spring.data.redis.host=${REDIS_HOST}
 spring.data.redis.port=${REDIS_PORT}
+spring.data.redis.password=${REDIS_PASSWORD}
 spring.data.redis.database=${REDIS_SCHEMA}
 
 ## AWS CREDENTIALS
