20250820 application.properties3 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,10 +15,10 @@ jwt.expiration.accessToken=${JWT_ACCESS_TOKEN_EXPIRATION}
 jwt.expriation.refreshToken=${JWT_REFRESH_TOKEN_EXPIRATION}
 
 # REDIS PROPERTIES
-spring.data.redis.host=${REDIS_HOST}
-spring.data.redis.port=${REDIS_PORT}
-spring.data.redis.password=${REDIS_PASSWORD}
-spring.data.redis.database=${REDIS_SCHEMA}
+spring.data.redis.host=${SPRING_DATA_REDIS_HOST:${REDIS_HOST:redis}}
+spring.data.redis.port=${SPRING_DATA_REDIS_PORT:${REDIS_PORT:6379}}
+spring.data.redis.password=${SPRING_DATA_REDIS_PASSWORD:${REDIS_PASSWORD:}}
+spring.data.redis.database=${SPRING_DATA_REDIS_DATABASE:${REDIS_SCHEMA:0}}
 
 ## AWS CREDENTIALS
 #aws.credentials.access-key=${AWS_ACCESS_KEY}
