20250820 application.properties4 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,6 +33,7 @@ spring.data.redis.database=${SPRING_DATA_REDIS_DATABASE:${REDIS_SCHEMA:0}}
 
 #SERVER SETTINGS
 server.port=${SERVER_PORT}
+server.servlet.context-path=${CONTEXT_PATH}
 
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USER}
